seeqt/QtPrintSupport/gen_qprintengine.h

class QPrintEngine;
class QVariant;
typedef struct QPrintEngine QPrintEngine;
typedef struct QVariant QVariant;
void QPrintEngine_setProperty(QPrintEngine* self, int key, QVariant* value);
QVariant* QPrintEngine_property(const QPrintEngine* self, int key);
bool QPrintEngine_newPage(QPrintEngine* self);
bool QPrintEngine_abort(QPrintEngine* self);
int QPrintEngine_metric(const QPrintEngine* self, int param1);
int QPrintEngine_printerState(const QPrintEngine* self);
void QPrintEngine_operatorAssign(QPrintEngine* self, QPrintEngine* param1);
void QPrintEngine_delete(QPrintEngine* self);